--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
-include pyproject.toml
-include *.md
-include LICENSE
+include CONTRIBUTING.md
+include Makefile
+recursive-include bin *.py
+recursive-include tests *.py
+recursive-include requirements *
