--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,3 +26,15 @@ jobs:
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.pypi_password }}
+    - name: Version
+      id: version
+      run: echo "::set-output name=version::$(python setup.py --version 2>/dev/null)"
+    - name: Tag
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ steps.version.outputs.version }}
+        release_name: ${{ steps.version.outputs.version }}
+        draft: false
+        prerelease: false
