--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+        cache: pip
+        cache-dependency-path: requirements/dev.txt
     - name: Lint
       run: make lint
     - name: Test
