--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+        cache: pip
+        cache-dependency-path: .github/workflows/release.yml
     - name: Lint
       run: make lint
     - name: Test
