--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,20 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-and-publish:
+    if: github.repository_owner == 'pypa'
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v3
       with:
         python-version: '3.x'
+        cache: pip
+        cache-dependency-path: .github/workflows/release.yml
     - name: Lint
       run: make lint
     - name: Test
