--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ jobs:
   build-and-publish:
     if: github.repository_owner == 'pypa'
     runs-on: ubuntu-latest
+    permissions:
+       # IMPORTANT: this permission is mandatory for trusted publishing
+       id-token: write
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -28,8 +31,6 @@ jobs:
       run: python -m build .
     - name: Publish
       uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.pypi_password }}
     - name: Version
       id: version
       run: echo "::set-output name=version::$(python setup.py --version 2>/dev/null)"
