--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,13 @@ jobs:
     if: github.repository_owner == 'pypa'
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+        cache: pip
+        cache-dependency-path: .github/workflows/release.yml
     - name: Version
       id: version
       run: echo "::set-output name=version::$(python setup.py --version 2>/dev/null)"
